# rustymusic

./: Cargo.toml  README.md  swars.txt
.github/workflows/: rust.yml
config/: bhupali.yaml  durga.yaml  hamsadhwani.yaml  malkauns.yaml  random1.txt  swars.txt  yaman.yaml  yeri_aali.yaml
config/bhupali/: 1.yaml  alankars.txt  aroha.txt  avroha.txt  pakad.txt
config/durga/: alankars.txt  aroha.txt  avroha.txt  durga.yaml  pakad.txt  swarmaalika.yaml
config/hamsadhwani/: alankars.txt  aroha.txt  avroha.txt  pakad.txt
config/malkauns/: comp1.yaml
config/random/: swars.txt
config/random/durga/: 1.txt  2.txt
config/random/yaman/: 1.txt  2.txt  3.txt  4.txt  5.txt
config/yaman/: alankars.txt  aroha.txt  avroha.txt  pakad.txt  yaman.yaml  yeri_aali.yaml
src/: lib.rs  opts.rs  test.rs
src/raagas/: aroha.rs  aroha_avroha.rs  avroha.rs  bhupali.rs  constants.rs  durga.rs  elements.rs  mod.rs  opts.rs  physics.rs  raag.rs  random.rs  sound.rs  swar_beat.rs  swarbeat.rs  swarblock.rs  swarblocks.rs  swarmaalika.rs  swars.rs  taal.rs  utils.rs
src/raagas/elements/: elements.rs  mod.rs  raag.rs  swarblock.rs  swarmaalika.rs
src/raagas/raag/: load.rs  mod.rs  raag.rs  random.rs
