[package]
name = "rustymusic"
version = "0.1.0"
authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rodio = "0.11.0"
structopt = "0.3.15"
pretty_assertions = "0.6.1"
getopts = "0.2.21"

[dependencies.rand]
features = ["small_rng"]
version = "0.7.3"